[gd_scene load_steps=4 format=3 uid="uid://clmfsi02jf7af"]

[ext_resource type="Script" path="res://Scripts/Characters/Select/character_select.gd" id="1_l4xy3"]
[ext_resource type="Texture2D" uid="uid://dl3a87y1bxtt8" path="res://art/tile_0096.png" id="2_jk1ph"]
[ext_resource type="Texture2D" uid="uid://dpfqok8tuy4r7" path="res://art/tile_0084.png" id="3_k8dnb"]

[node name="CharacterSelect" type="Node"]
script = ExtResource("1_l4xy3")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 22.0
offset_right = 32.0
offset_bottom = 28.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Pick a Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="WarriorButton" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("2_jk1ph")
ignore_texture_size = true
stretch_mode = 5

[node name="WarriorLabel" type="Label" parent="HBoxContainer/WarriorButton"]
layout_mode = 0
offset_left = 6.0
offset_top = 54.0
offset_right = 46.0
offset_bottom = 60.0
text = "Warrior"
horizontal_alignment = 1
vertical_alignment = 3

[node name="MageButton" type="TextureButton" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("3_k8dnb")
ignore_texture_size = true
stretch_mode = 5

[node name="MageLabel" type="Label" parent="HBoxContainer/MageButton"]
layout_mode = 0
offset_left = 5.0
offset_top = 54.0
offset_right = 45.0
offset_bottom = 60.0
text = "Mage"
horizontal_alignment = 1
